--- a/client/src/pages/activity-plan/plan.component.html
+++ b/client/src/pages/activity-plan/plan.component.html
@@ -2,4 +2,6 @@
     <dd>{{activityType}}, {{activityLevel}}</dd>
     <dd>{{timeOfDay}}, {{duration}}</dd>
 </dl>
-<button>Edit plan</button>
+<button *ngIf="complete" class="complete">Edit plan</button>
+<button *ngIf="!complete" class="incomplete">Complete plan</button>
+<button class="edit">Edit plan</button>
