--- a/client/src/infrastructure/dialogs/modal-dialog.component.html
+++ b/client/src/infrastructure/dialogs/modal-dialog.component.html
@@ -1,9 +1,9 @@
-<article class="page">
+<article class="heartsteps-page">
     <header>
         <h2>{{title}}</h2>
         <button class="back" (click)="dismiss()">Back</button>
     </header>
-    <ion-content>
+    <div class="content">
         <ng-content></ng-content>
-    </ion-content>
+    </div>
 </article>
