--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -11,6 +11,7 @@ body > ion-app.app-root {
 .app-root > .pages > *,
 .app-root > .modals > * {
     display: flex;
+    flex-direction: column;
     position: absolute;
     top: 0px;
     left: 0px;
