--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -14,3 +14,15 @@
         flex-grow: 1;
     }
 }
+
+.heartsteps-scrollable {
+    display: block;
+    flex-grow: 1;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+}
+
+.heartsteps-unscrollable {
+    overflow-y: visible;
+}
+
