Update start-screen styles for morning message

--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -37,3 +37,16 @@ heartsteps-stepper {
         }
     }
 }
+
+heartsteps-stepper.start-screen {
+    display: block;
+
+    .pagination-bullets > * {
+        background-color: transparent;
+        border: $color-white 1px solid;
+
+        &.active {
+            background-color: $color-white;
+        }
+    }
+}
