--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -1,16 +1,10 @@
-.start-screen,
-.alternate-background,
-.heartsteps-message-modal {
+.start-screen {
     @extend .heartsteps-page;
     background-color: transparent;
     color: $color-white;
-    font-size: 1.6rem;
-    padding: 0em 2em;
-
     box-shadow: none;
 
-    display: flex;
-    flex-direction: column;
+    padding: 1em 2em;
 
     > * {
         display: block;
@@ -20,6 +14,18 @@
 
     > button {
         flex-grow: 0;
+    }
+
+    > header,
+    > .content {
+        flex-grow: 0;
+        margin: 0px;
+    }
+
+    a,
+    .label,
+    .description {
+        color: $color-white;
     }
 
     .headline {
@@ -33,27 +39,41 @@
         justify-content: center;
     }
 
-    header {
+    > header,
+    > .content {
         background-color: transparent;
         border-width: 0px;
     }
 
-    button,
-    input[type=submit],
-    button[type=button] {
+    .heartsteps-button {
         border-color: $color-white;
         color: $color-white;
         background-color: transparent;
 
         &:hover,
         &:focus {
-            color: $color-white;
-            opacity: 0.9;
+            box-shadow: inset 0 0 0.5em 0px $color-white;
+        }
+
+        &.is-loading,
+        &:active {
+            background-color: $color-white;
+            color: $color-primary;
         }
     }
 
-    a {
-        color: $color-white;
+    .heartsteps-checkmark-button {
+        border-color: $color-white;
+        &:before {
+            background-color: $color-white;
+        }
+    }
+
+    .heartsteps-checkmark-button-selected {
+        background-color: $color-white;
+        &:before {
+            background-color: $color-primary;
+        }
     }
 
     article {
@@ -61,41 +81,14 @@
     }
 }
 
-.start-screen form {
-    label, legend, button {
-        color: $color-white;
-    }
-
+.start-screen .heartsteps-form {
+    
+    label,
+    .label,
+    .description,
+    legend,
     button {
-        border-width: 0px;
-    }
-
-    app-range-field.heartsteps-form-field ul li input[type=radio] {
-        background-color: $color-white;
-    }
-
-    ul > li >button {
         color: $color-white;
     }
-}
 
-.start-screen heartsteps-stepper {
-    display: flex;
-    background-color: transparent;
-    margin: 0em auto;
-
-    .pagination-bullets > * {
-        background-color: transparent;
-        border: $color-white 1px solid;
-
-        &.active {
-            background-color: $color-white;
-        }
-    }
-}
-
-.start-screen app-choice-field.heartsteps-form-field button {
-    &:before {
-        background-color: $color-white;
-    }
 }
