Add weekly goal to dashboard, and remove from weekly progress

--- a/client/src/heartsteps/current-week/weekly-progress.component.html
+++ b/client/src/heartsteps/current-week/weekly-progress.component.html
@@ -1,14 +1,4 @@
-<p *ngIf="!goalAchieved"
-    class="progress-insert"
-    >
-    <span><span class="metric">{{complete}}</span> min</span>
-    <span>completed of</span>
-    <span>{{total}} min goal</span>
-</p>
-<p *ngIf="goalAchieved"
-    class="progress-insert"
-    >
+<p class="progress-insert">
     <span><span class="metric">{{complete}}</span> min</span>
     <span>completed</span>
-    <span>this week</span>
 </p>
