Change fitbit update button

--- a/client/src/heartsteps/daily-summaries/daily-activities-update.scss
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.scss
@@ -1,13 +1,17 @@
 heartsteps-activity-daily-update {
 
-    button:before {
-        content: '';
-        display: inline-block;
-        width: 1em;
-        height: 1em;
-        mask-image: url('../assets/refresh.svg');
-        mask-repeat: no-repeat;
-        background-color: $link-color;
+    > button {
+        @extend .heartsteps-bottom-button;
+        padding-bottom: 0.25em;
+    }
+
+    > button.is-loading {
+        padding-bottom: 1.5em;
+    }
+
+    > p {
+        margin: 0em;
+        text-align: center;
     }
     
 }
