--- a/client/src/theme/buttons.scss
+++ b/client/src/theme/buttons.scss
@@ -57,7 +57,18 @@
         background-color: $color-white;
         color: $color-primary;
     }
+}
 
+.heartsteps-bottom-button {
+    @extend .heartsteps-button;
+    border-width: 0px;
+    border-top-width: 1px;
+
+    &:focus, &:hover {
+        box-shadow: none;
+        box-shadow: inset 0 0 0px 0px $color-primary;
+        text-decoration: underline;
+    }
 }
 
 .heartsteps-remove-button {
