--- a/client/src/theme/base.scss
+++ b/client/src/theme/base.scss
@@ -10,12 +10,14 @@ body {
     display:block;
     color: $color-gray;
     text-transform: uppercase;
+    font-size: 0.8em;
 }
 
 .description {
     display: block;
     color: $text-color;
     text-transform: none;
+    font-size: 1em;
 }
 
 .error {
