Fix activity type modal

--- a/client/src/infrastructure/dialogs/modal-dialog.component.html
+++ b/client/src/infrastructure/dialogs/modal-dialog.component.html
@@ -1,7 +1,7 @@
 <article class="heartsteps-page">
     <header>
         <h2>{{title}}</h2>
-        <button class="back" (click)="dismiss()">Back</button>
+        <a class="back" (click)="dismiss()">Cancel</a>
     </header>
     <div class="content">
         <ng-content></ng-content>
