--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -6,13 +6,6 @@ heartsteps-stepper {
         @extend .heartsteps-unscrollable;
     }
 
-    background-color: $background-primary !important;
-
-    > header {
-        background-color: transparent !important;
-        border-bottom: 0px !important;
-    }
-
     > header > .back {
         top: 0px;
     }
@@ -37,9 +30,18 @@ heartsteps-stepper {
     }
 }
 
-heartsteps-stepper.start-screen {
+body heartsteps-stepper {
+    background-color: $background-primary;
+}
+
+body heartsteps-stepper > header {
+        background-color: transparent;
+        border-bottom: 0px;
+}
+
+body heartsteps-stepper.start-screen {
     display: block;
-    background-color: transparent !important;
+    background-color: transparent;
 
     .pagination-bullets > * {
         background-color: transparent;
