Split dashboard-notifications from dashboard component (and style banners)

--- a/client/src/theme/buttons.scss
+++ b/client/src/theme/buttons.scss
@@ -139,4 +139,11 @@
     }
 }
 
+.heartsteps-banner-button {
+    display: block;
+    background-color: $color-primary;
+    color: $color-white;
+    padding: 0.5em 1em;
+}
+
 
