--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -37,6 +37,8 @@
                 <th scope='col'>Token</th>
                 <th scope='col'>Birth Year</th>
                 <th scope='col'>Enrolled</th>
+                <th scope='col'>Active</th>
+                <th scope='col'>Fitbit Days Worn</th>
                 <th scope='col'>Phone</th>
             </tr>
         </thead>
@@ -47,6 +49,8 @@
                 <td>{{participant.enrollment_token}}</td>
                 <td>{{participant.birth_year}}</td>
                 <td>{{participant.enrolled}}</td>
+                <td>{{participant.is_active}}</td>
+                <td>{{participant.wore_fitbit_days}}</td>
                 <td><a data-toggle='modal' data-target="#send-sms-modal" class='btn sms-btn'>{{participant.user.contactinformation.phone_e164 }}</a></td>
                 <td></td>
             </tr>
