Change banner reflection tests

--- a/client/src/pages/home/dashboard-notifications.component.html
+++ b/client/src/pages/home/dashboard-notifications.component.html
@@ -2,11 +2,11 @@
     <a *ngIf="weeklySurvey"
         (click)="navigateToWeeklySurvey()"
         >
-        It's time to make your weekly plan and set your goal for the following week
+        Please complete the weekly reflection
     </a>
     <a *ngIf="morningMessage"
         (click)="navigateToMorningMessage()"
         >
-        Good morning
+        Please complete the morning check-in
     </a>
 </nav>
