--- a/client/src/infrastructure/components/page.component.scss
+++ b/client/src/infrastructure/components/page.component.scss
@@ -1,5 +1,7 @@
 app-page {
     @extend .heartsteps-container;
+    @extend .heartsteps-scrollable;
+    height: 100%;
     > article {
         @extend .heartsteps-page;
     }
