--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -10,13 +10,8 @@ body > ion-app.app-root {
 
 .app-root > .pages > *,
 .app-root > .modals > * {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
+    @extend .heartsteps-scroll-container;
+    @extend .heartsteps-fullscreen-container;
     z-index: 10;
 }
 
