--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -1,4 +1,14 @@
 
+.heartsteps-fullscreen-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+
 .heartsteps-container {
     display: flex;
     flex-direction: column;
@@ -26,3 +36,18 @@
     overflow-y: visible !important;
 }
 
+
+@media(min-width: 650px) {
+    .heartsteps-scroll-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+    }
+
+    .heartsteps-scroll-container .heartsteps-scrollable {
+        height: auto;
+        overflow-y: visible;
+    }
+}
