--- a/client/src/theme/pages.scss
+++ b/client/src/theme/pages.scss
@@ -1,12 +1,10 @@
 .heartsteps-page {
     font-size: 1.6rem;
-    background-color: $background-alternate;
+    background-color: transparent;
     padding: 0px;
     margin: 0px;
 
-    > header,
-    > nav,
-    > footer {
+    > * {
         background-color: $background-alternate;
     }
 
@@ -27,9 +25,12 @@
 
 @media(min-width: 650px) {
     .heartsteps-page {
+        padding: 2em 0em;
+    }
+
+    .heartsteps-page > * {
         width: 635px;
-        margin: 2em auto;
-        box-shadow: $color-gray-dark 0px 0.25em 1em 0em;
+        margin: 0px auto;
     }
 }
 
@@ -60,6 +61,8 @@
 }
 
 .heartsteps-page {
+    @extend .heartsteps-scroll-container;
+    // @extend .heartsteps-fullscreen-container;
     display:flex;
     flex-direction: column;
     flex-grow: 1;
@@ -68,10 +71,6 @@
     > * {
         flex: 0 1 auto;
         overflow: auto;
-    }
-
-    > .content {
-        @extend .heartsteps-scrollable;
     }
 }
 
