--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -100,7 +100,7 @@
 
 @media(min-width: 650px) {
     .start-screen {
-        width: auto;
+        width: 100%;
         margin: 0em;
         padding: 1em 0em;
         box-shadow: none;
