--- a/client/src/infrastructure/dialogs/modal-dialog.scss
+++ b/client/src/infrastructure/dialogs/modal-dialog.scss
@@ -1,14 +1,19 @@
 
-app-modal-dialog {
-    @extend .heartsteps-container;
-    height: 100%;
+.modal-wrapper {
 
-    > article.heartsteps-page {
-        width: 100%;
-        height: 100%;
+    article {
+        padding: 0em;
     }
 
-    > article > header .back {
+    article > * {
+        width: 100%;
+    }
+
+    article > .content {
+        flex-grow: 1;
+    }
+
+    article > header .back {
         color: $color-danger;
     }
 
