Fix scrolling bug in start-screen

--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -34,7 +34,7 @@ heartsteps-stepper {
     }
 }
 
-body heartsteps-stepper.start-screen {
+heartsteps-stepper.start-screen {
 
     > * {
         background-color: transparent;
