--- a/client/src/theme/layout.scss
+++ b/client/src/theme/layout.scss
@@ -20,9 +20,12 @@
     }
 
     > form,
-    > .content {
+    > .content,
+    > .heartsteps-container {
+        @extend .heartsteps-container;
         flex-grow: 1;
     }
+
 }
 
 .heartsteps-scroll-container {
