Make home screen nav labels not wrap

--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -31,6 +31,7 @@ page-home {
             font-size: 12px;
             text-decoration: none;
             color: $color-gray-dark;
+            white-space: nowrap;
         }
         > *:before {
             content: ' ';
