Update notification to use app-page.start-screen

--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -1,9 +1,13 @@
 .start-screen {
     @extend .heartsteps-page;
     @extend .heartsteps-scroll-full;
-    background: linear-gradient(to top, #1a508d 7%,#40a2e0 93%);
+    // background: linear-gradient(to top, #1a508d 7%,#40a2e0 93%);
 
     color: $color-white;
+
+    > * {
+        background-color: transparent;
+    }
 
     > button {
         flex-grow: 0;
