Fix welcome page layout

--- a/client/src/pages/enrollment/welcome.page.scss
+++ b/client/src/pages/enrollment/welcome.page.scss
@@ -1,23 +1,23 @@
-enrollment-welcome-page {
+// enrollment-welcome-page {
 
-    > .start-screen {
-        background: transparent;
-        padding: 2em;
-    }
+//     > .start-screen {
+//         background: transparent;
+//         padding: 2em;
+//     }
 
-    .heartsteps-logo {
-        margin: 3em auto 2em;
-    }
+//     .heartsteps-logo {
+//         margin: 3em auto 2em;
+//     }
 
-}
+// }
 
-@media(min-width: 650px) {
-    enrollment-welcome-page > .start-screen {
-        width: 635px;
-        margin: 0em auto;
-    }
+// @media(min-width: 650px) {
+//     enrollment-welcome-page > .start-screen {
+//         width: 635px;
+//         margin: 0em auto;
+//     }
 
-    enrollment-welcome-page > .start-screen > * {
-        width: 100%;
-    }
-}
+//     enrollment-welcome-page > .start-screen > * {
+//         width: 100%;
+//     }
+// }
