--- a/client/src/infrastructure/components/page.component.scss
+++ b/client/src/infrastructure/components/page.component.scss
@@ -5,6 +5,9 @@ app-page {
 }
 
 app-page.start-screen {
+    overflow: hidden;
+    width: 100%;
+
     > article {
         @extend .start-screen;
         padding: 0em;
