--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -103,3 +103,11 @@
         margin: 0em auto;
     }
 }
+
+.start-screen .heartsteps-page {
+    color: $text-color;
+
+    a {
+        color: $link-color;
+    }
+}
