Connet weather service to heartsteps-server

--- a/client/src/heartsteps/weather/weather.component.html
+++ b/client/src/heartsteps/weather/weather.component.html
@@ -1,4 +1,5 @@
-<div>
+<div >
     <ng-content></ng-content>
-    <em>{{high}}/{{low}}</em>
+    <em *ngIf="!loading">{{high}}/{{low}}</em>
+    <em *ngIf="loading">Loading</em>
 </div>
